--- a/package.json
+++ b/package.json
@@ -17,16 +17,17 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-rate-limit": "^6.5.1",
+    "graceful-fs": "^4.2.11",
     "handlebars": "^4.7.8",
     "helmet": "^5.1.0",
     "http-status-codes": "^2.2.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "migrate-mongo": "^9.0.0",
     "mongoose": "^6.4.3",
     "mongoose-aggregate-paginate-v2": "^1.0.6",
     "mongoose-paginate-v2": "^1.7.0",
     "nodemailer": "^6.7.7",
-    "nodemon": "^2.0.19",
+    "nodemon": "^3.1.4",
     "stripe": "^12.4.0",
     "uuid": "^8.3.2"
   },
