--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/app.js",
     "dev": "nodemon --exec babel-node src/app.js",
-    "build": "babel src -d dist"
+    "build": "babel src -d dist",
+    "vercel-build": "echo hello"
   },
   "author": "",
   "license": "ISC",
