--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "celebrate": "^15.0.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.18.1",
     "express-rate-limit": "^6.5.1",
+    "googleapis": "^144.0.0",
     "graceful-fs": "^4.2.11",
     "handlebars": "^4.7.8",
     "helmet": "^5.1.0",
