--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "crypto": "^1.0.1",
     "express": "^4.18.1",
     "express-rate-limit": "^6.5.1",
+    "firebase-admin": "^12.6.0",
     "googleapis": "^144.0.0",
     "graceful-fs": "^4.2.11",
     "handlebars": "^4.7.8",
